# bybit-rs

./: .pre-commit-config.yaml  Cargo.toml  README.md  _typos.toml
.cargo/: config.toml
.github/workflows/: test.yml
assets/fixtures/: ws_linear_ticker.json
src/: account.rs  api.rs  asset.rs  client.rs  config.rs  errors.rs  general.rs  lib.rs  market.rs  model.rs  model.rs.orig  open_fixture.rs  position.rs  timed.rs  trade.rs  util.rs  ws.rs
src/models/: account_info.rs  add_margin_request.rs  add_reduce_margin_request.rs  add_reduce_margin_result.rs  amend_order_request.rs  amended_order.rs  amended_order_list.rs  ask.rs  auction_fee_info.rs  batch_amend_request.rs  batch_cancel_request.rs  batch_cancel_response.rs  batch_place_request.rs  batched_order.rs  batched_order_list.rs  bid.rs  borrow_history.rs  borrow_history_entry.rs  borrow_history_request.rs  bybit_api_response.rs  cancel_all_request.rs  cancel_order_request.rs  canceled_order.rs  canceled_order_list.rs  cancelled_list.rs  category.rs  change_margin_request.rs  closed_pnl_item.rs  closed_pnl_request.rs  closed_pnl_result.rs  coin_data.rs  collateral_info.rs  collateral_info_list.rs  delivery_price.rs  delivery_price_summary.rs  delivery_record.rs  delivery_record_result.rs  empty.rs  execution.rs  execution_data.rs  (+123 more)
src/models/linear_ticker/: linear_ticker_data.rs  linear_ticker_delta.rs  linear_ticker_snapshot.rs  mod.rs
src/models/return_codes/: asset.rs  crypto_load.rs  earn.rs  general.rs  mod.rs  return_code.rs  spot_leverage_token.rs  spot_margin.rs  spot_trade.rs  uta.rs
src/serde_helpers/: mod.rs
tests/: account_test.rs  general_test.rs  market_test.rs  position_test.rs  trade_test.rs  ws_test.rs
