[package]
name = "rs_bybit"
version = "0.3.2"
edition = "2021"
readme = "README.md"
license = "MIT"
categories = ["api-bindings"]
description = "Bybit V5 API bindings in Rust"
repository = "https://github.com/unkuseni/bybit-rs"
authors = ["unkuseni <twitter.com/unkuseni>"]

[lib]
name = "bybit"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.128"
itertools = "0.13.0"
serde = { version = "1.0.210", features = ["derive"] }
hex = "0.4.3"
hmac = "0.12.1"
reqwest = { version = "0.12.7", features = ["json"] }
tokio-tungstenite = { features = ["native-tls"], version = "0.24.0" }
tokio = { version = "1.40.0", features = ["full"] }
url = "2.5.0"
sha2 = "0.10.8"
once_cell = "1.19.0"
chrono = "0.4.31"
rand = "0.8.5"
futures = "0.3.25"
thiserror = "1.0.64"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
