[package]
name = "rs_bybit"
version = "0.3.5"
edition = "2021"
readme = "README.md"
license = "MIT"
categories = ["api-bindings"]
description = "Bybit V5 API bindings in Rust"
repository = "https://github.com/unkuseni/rs_bybit"
authors = ["unkuseni <twitter.com/unkuseni>"]

[lib]
name = "bybit"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = { version = "2.0.1", features = ["full"] }
serde_json = "1.0.128"
itertools = "0.13.0"
serde = { version = "1.0.210", features = ["derive"] }
hex = "0.4.3"
hmac = "0.12.1"
openssl = "0.10.72"
reqwest = { version = "0.12.7", features = ["json"] }
tokio-tungstenite = { features = ["native-tls"], version = "0.24.0" }
tokio = { version = "1.40.0", features = ["full"] }
url = "2.5.0"
sha2 = "0.10.8"
once_cell = "1.19.0"
chrono = "0.4.31"
rand = "0.9.1"
futures = "0.3.25"
thiserror = "2.0.12"
log = "0.4.27"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
